chore: tsup cannot solve dynamic import issue with banner

--- a/apps/service-scrape/stack-service_scrape_pipeline/package.json
+++ b/apps/service-scrape/stack-service_scrape_pipeline/package.json
@@ -8,8 +8,7 @@
         "format": "biome format --write",
         "test:type": "tsc",
         "cdk:synth": "cdk synth",
-        "cdk:dev": "cdk deploy -m direct --no-rollback --asset-parallelism true --hotswap-fallback --progress",
-        "build": "tsup"
+        "cdk:dev": "cdk deploy -m direct --no-rollback --asset-parallelism true --hotswap-fallback"
     },
     "devDependencies": {
         "@infra/common": "workspace:*",
@@ -18,8 +17,7 @@
         "@service-scrape/lib-db_service_scrape": "workspace:*",
         "aws-cdk-lib": "^2.212.0",
         "cdk-nag": "^2.37.15",
-        "constructs": "^10.4.2",
-        "tsup": "^8.5.0"
+        "constructs": "^10.4.2"
     },
     "type": "module"
 }
