--- a/.github/actions/setup-cd/action.yaml
+++ b/.github/actions/setup-cd/action.yaml
@@ -18,3 +18,7 @@ runs:
     - name: Install dependencies
       shell: bash
       run: pnpm i --no-frozen-lockfile
+
+    - name: Build all packages
+      shell: bash
+      run: pnpm -r build
