--- a/apps/observability/lib-opentelemetry/package.json
+++ b/apps/observability/lib-opentelemetry/package.json
@@ -23,6 +23,7 @@
         "@opentelemetry/sdk-node": "0.203.0",
         "@opentelemetry/semantic-conventions": "^1.36.0",
         "dotenv": "17.2.1",
+        "otlp-logger": "^1.1.11",
         "pino": "9.8.0",
         "pino-opentelemetry-transport": "^1.0.1",
         "zod": "4.0.17"
