remove tsup build requirement

--- a/apps/service-scrape/lib-db_service_scrape/package.json
+++ b/apps/service-scrape/lib-db_service_scrape/package.json
@@ -2,8 +2,8 @@
     "name": "@service-scrape/lib-db_service_scrape",
     "private": true,
     "exports": {
-        ".": "./dist/index.js",
-        "./dev": "./dist/dev/index.js"
+        ".": "./src/index.ts",
+        "./dev": "./src/dev/index.ts"
     },
     "scripts": {
         "format": "biome format --write",
@@ -11,8 +11,7 @@
         "generate": "node ./generate.ts && biome format --write",
         "test:type": "tsc",
         "test:unit": "vitest run --coverage",
-        "dev:test:unit": "vitest --coverage",
-        "build": "tsup"
+        "dev:test:unit": "vitest --coverage"
     },
     "dependencies": {
         "dotenv": "17.2.1",
