--- a/apps/observability/lib-opentelemetry/package.json
+++ b/apps/observability/lib-opentelemetry/package.json
@@ -2,16 +2,17 @@
     "name": "@observability/lib-opentelemetry",
     "private": true,
     "exports": {
-        ".": "./dist/index.js"
+        ".": "./src/index.ts"
     },
     "scripts": {
         "format": "biome format --write",
         "test:type": "tsc",
-        "test:unit": "vitest run --coverage",
-        "dev:test:unit": "vitest --coverage",
-        "build": "echo export const commitId = \\\"$(git rev-parse --short HEAD)\\\" > ./src/commitId.ts && tsup"
+        "test:unit": "OTEL_LOG_LEVEL=trace vitest run --coverage",
+        "dev:test:unit": "OTEL_LOG_LEVEL=trace vitest --coverage",
+        "build": "echo export const commitId = \\\"$(git rev-parse --short HEAD)\\\" > ./src/commitId.ts"
     },
     "dependencies": {
+        "@opentelemetry/api": "^1.9.0",
         "@opentelemetry/auto-instrumentations-node": "^0.62.1",
         "@opentelemetry/exporter-logs-otlp-proto": "0.203.0",
         "@opentelemetry/exporter-metrics-otlp-proto": "^0.203.0",
@@ -20,8 +21,10 @@
         "@opentelemetry/sdk-logs": "^0.203.0",
         "@opentelemetry/sdk-metrics": "^2.0.1",
         "@opentelemetry/sdk-node": "0.203.0",
+        "@opentelemetry/sdk-trace-base": "^2.1.0",
         "@opentelemetry/semantic-conventions": "^1.36.0",
         "dotenv": "17.2.1",
+        "otlp-logger": "^1.1.11",
         "pino": "9.8.0",
         "pino-opentelemetry-transport": "^1.0.1",
         "zod": "4.0.17"
