--- a/.github/actions/setup-ci/action.yaml
+++ b/.github/actions/setup-ci/action.yaml
@@ -29,12 +29,12 @@ runs:
       shell: bash
       run: pnpm i --no-frozen-lockfile
 
+    - name: Build all packages
+      shell: bash
+      run: pnpm -r build
+
     - name: Cache Nx tasks
       uses: actions/cache@v4
       with:
         path: .nx/cache
-        key: nx-cache
-
-    - name: Build all packages
-      shell: bash
-      run: pnpm -r build
+        key: nx-cache-${{ steps.setSHAs.outputs.base }}
