--- a/.github/actions/setup-ci/action.yaml
+++ b/.github/actions/setup-ci/action.yaml
@@ -33,8 +33,8 @@ runs:
       shell: bash
       run: pnpm -r build
 
-    - name: Cache Nx tasks
+    - name: Cache Nx tasks from BASE SHA
       uses: actions/cache@v4
       with:
-        path: .nx/cache
-        key: nx-cache-${{ steps.setSHAs.outputs.base }}
+        path: .nx
+        key: nx-${{ steps.setSHAs.outputs.base }}
