attempt to cache Nx

--- a/.github/actions/setup-ci/action.yaml
+++ b/.github/actions/setup-ci/action.yaml
@@ -1,5 +1,13 @@
 name: "Setup CI"
 description: "Prepare CI job. Setup Nx, node and pnpm. Install dependencies and build affected packages"
+inputs:
+  job-name:
+    required: true
+    description: "Name of job - for caching purposes"
+outputs:
+  nx-cache-key:
+    description: "Key for saving Nx tasks cache"
+    value: ${{ steps.nx-cache-restore.outputs.cache-primary-key }}
 runs:
   using: "composite"
   steps:
@@ -33,8 +41,9 @@ runs:
       shell: bash
       run: pnpm -r build
 
-    - name: Cache Nx tasks from BASE SHA
-      uses: actions/cache@v4
+    - name: Load cache Nx tasks from BASE SHA
+      id: nx-cache-restore
+      uses: actions/cache/restore@v4
       with:
         path: .nx
-        key: nx-${{ steps.setSHAs.outputs.base }}
+        key: nx-cache${{ inputs.job-name }}-${{ steps.setSHAs.outputs.base }}
