--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -15,9 +15,20 @@ jobs:
           fetch-depth: 0
 
       - name: Setup dependencies Nx
+        id: setup
         uses: ./.github/actions/setup-ci
+        with:
+          job-name: test-unit
+
       - name: Test
         run: pnpm nx affected -t test:unit test:type
+
+      - name: Save cache Nx tasks from BASE SHA
+        uses: actions/cache/save@v4
+        if: always()
+        with:
+          path: .nx
+          key: ${{ steps.setup.outputs.nx-cache-key }}
 
   test-integration:
     runs-on: ubuntu-24.04-arm
@@ -28,7 +39,10 @@ jobs:
           fetch-depth: 0
 
       - name: Setup dependencies Nx
+        id: setup
         uses: ./.github/actions/setup-ci
+        with:
+          job-name: test-unit
 
       - name: Deploy cdk quantum stacks
         run: pnpm nx affected -t cdk:dev
@@ -42,3 +56,16 @@ jobs:
       # TODO: add integration test scripts
       - name: Test
         run: echo 'TODO'
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          DB_SERVICE_SCRAPE: ${{ secrets.DB_SERVICE_SCRAPE }}
+          OTEL_EXPORTER_OTLP_ENDPOINT: ${{ secrets.OTEL_EXPORTER_OTLP_ENDPOINT }}
+          OTEL_EXPORTER_OTLP_HEADERS: ${{ secrets.OTEL_EXPORTER_OTLP_HEADERS }}
+
+      - name: Save cache Nx tasks from BASE SHA
+        uses: actions/cache/save@v4
+        if: always()
+        with:
+          path: .nx
+          key: ${{ steps.setup.outputs.nx-cache-key }}
