--- a/.github/actions/setup-ci/action.yaml
+++ b/.github/actions/setup-ci/action.yaml
@@ -1,9 +1,9 @@
 name: "Setup CI"
 description: "Prepare CI job. Setup Nx, node and pnpm. Install dependencies and build affected packages"
 outputs:
-  nx-cache-key:
+  nx-base-sha:
     description: "Key for saving Nx tasks cache"
-    value: ${{ steps.nx-cache-restore.outputs.cache-primary-key }}
+    value: ${{ steps.setSHAs.outputs.base }}
 runs:
   using: "composite"
   steps:
@@ -36,10 +36,3 @@ runs:
     - name: Build all packages
       shell: bash
       run: pnpm -r build
-
-    - name: Load cache Nx tasks from BASE SHA
-      id: nx-cache-restore
-      uses: actions/cache/restore@v4
-      with:
-        path: .nx
-        key: nx-cache-${{ github.job }}-${{ steps.setSHAs.outputs.base }}
