--- a/.github/actions/setup-ci/action.yaml
+++ b/.github/actions/setup-ci/action.yaml
@@ -1,9 +1,5 @@
 name: "Setup CI"
 description: "Prepare CI job. Setup Nx, node and pnpm. Install dependencies and build affected packages"
-outputs:
-  nx-base-sha:
-    description: "Key for saving Nx tasks cache"
-    value: ${{ steps.setSHAs.outputs.base }}
 runs:
   using: "composite"
   steps:
@@ -36,3 +32,16 @@ runs:
     - name: Build all packages
       shell: bash
       run: pnpm -r build
+
+    - name: Cache Nx tasks from BASE SHA
+      uses: actions/cache@v4
+      with:
+        path: .nx
+        key: nx-cache-${{ github.job }}-${{ github.event.pull_request.base.sha }}-${{ github.event.pull_request.number }}-${{ github.run_id }}
+        # 1. Prefer to restore from closest job and pr (common base sha)
+        # 2. Then restore from closest job and base sha
+        # 3. Then restore from closest job
+        restore-keys: |
+          nx-cache-${{ github.job }}-${{ github.event.pull_request.base.sha }}-${{ github.event.pull_request.number }}
+          nx-cache-${{ github.job }}-${{ github.event.pull_request.base.sha }}
+          nx-cache-${{ github.job }}
