--- a/apps/service-scrape/function-scrape_locality_trigger/package.json
+++ b/apps/service-scrape/function-scrape_locality_trigger/package.json
@@ -5,7 +5,7 @@
         "format": "biome format --write",
         "test:type": "tsc",
         "test:unit": "vitest run --coverage",
-        "dev:test:unit": "vitest --coverage"
+        "test:dev": "vitest --coverage"
     },
     "devDependencies": {
         "@testcontainers/localstack": "^11.5.1",
