--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,6 +6,20 @@ on:
       - '**'
 
 jobs:
+  test-type:
+    runs-on: ubuntu-24.04-arm
+    steps:
+      - name: Deep checkout branch
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Setup dependencies Nx
+        uses: ./.github/actions/setup-ci
+
+      - name: Test
+        run: pnpm nx affected -t test:type
+
   test-unit:
     runs-on: ubuntu-24.04-arm
     steps:
@@ -18,9 +32,9 @@ jobs:
         uses: ./.github/actions/setup-ci
 
       - name: Test
-        run: pnpm nx affected -t test:unit test:type
+        run: pnpm nx affected -t test:unit
 
-  test-integration:
+  test-cdk:
     runs-on: ubuntu-24.04-arm
     steps:
       - name: Deep checkout branch
