--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
         "@biomejs/biome": "2.2.3",
         "@types/node": "*",
         "@vitest/coverage-v8": "3.2.4",
-        "aws-cdk": "^3.0.0",
+        "aws-cdk": "2.1029.0",
         "esbuild": "^0.25.9",
         "knip": "5.63.1",
         "nx": "21.5.1",
