--- a/apps/service-scrape/function-scrape_locality/package.json
+++ b/apps/service-scrape/function-scrape_locality/package.json
@@ -6,10 +6,9 @@
         "puppeteer": "pnpm dlx @puppeteer/browsers install chrome-headless-shell@stable && mv ./chrome-headless-shell/*/* ./.puppeteer && rm -r chrome-headless-shell",
         "test:type": "tsc",
         "test:unit": "vitest run --coverage",
-        "dev:test:unit": "vitest --coverage"
+        "test:dev": "vitest --coverage"
     },
     "devDependencies": {
-        "@types/common-errors": "^1.0.5",
         "chromium-bidi": "^8.0.0",
         "pino": "9.8.0",
         "pino-pretty": "13.1.1"
@@ -26,7 +25,6 @@
         "@sparticuz/chromium-min": "^138.0.2",
         "@turf/turf": "7.2.0",
         "cheerio": "1.1.2",
-        "common-errors": "^1.2.0",
         "http-status-codes": "^2.3.0",
         "kysely": "0.28.4",
         "puppeteer-core": "^24.19.0",
