--- a/package.json
+++ b/package.json
@@ -14,17 +14,16 @@
         "build": "nx run-many -t build"
     },
     "devDependencies": {
-        "@biomejs/biome": "2.2.0",
+        "@biomejs/biome": "2.2.3",
         "@types/node": "*",
         "@vitest/coverage-v8": "3.2.4",
-        "aws-cdk": "^2.1026.0",
+        "aws-cdk": "2.1029.0",
         "esbuild": "^0.25.9",
-        "knip": "5.62.0",
-        "nx": "21.3.11",
+        "knip": "5.63.1",
+        "nx": "21.5.1",
         "simple-git-hooks": "2.13.1",
         "syncpack": "14.0.0-alpha.19",
         "typescript": "~5.9.2",
-        "vite": "7.1.2",
         "vitest": "3.2.4"
     },
     "simple-git-hooks": {
