--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -16,7 +16,11 @@ jobs:
         uses: ./.github/actions/setup-cd
 
       - name: Deploy observability
-        run: pnpm -r grafana:import
+        uses: nick-fields/retry@v3
+        with:
+          timeout_seconds: 20
+          max_attempts: 3
+          command: pnpm -r grafana:import
         env:
           GRAFANA_API_KEY: ${{ secrets.GRAFANA_API_KEY }}
           GRAFANA_API: ${{ secrets.GRAFANA_API }}
