--- a/biome.json
+++ b/biome.json
@@ -1,5 +1,5 @@
 {
-    "$schema": "https://biomejs.dev/schemas/2.2.0/schema.json",
+    "$schema": "https://biomejs.dev/schemas/2.2.3/schema.json",
     "formatter": {
         "enabled": true,
         "indentStyle": "space",
@@ -32,6 +32,7 @@
             "!**/dist",
             "!**/node_modules",
             "!**/.puppeteer",
+            "!**/cdk.out",
             "!.nx"
         ],
         "ignoreUnknown": true
