cdk dev deploy to override hotswap

--- a/apps/service-scrape/stack-service_scrape_pipeline/package.json
+++ b/apps/service-scrape/stack-service_scrape_pipeline/package.json
@@ -9,6 +9,7 @@
         "test:type": "tsc",
         "sam:local": "pnpm sam local invoke -t cdk.out/NewHomie-StackServiceScrapePipeline-Dev.template.json --skip-pull-image",
         "cdk:synth": "cdk synth",
+        "cdk:dev:deploy": "cdk deploy -m direct --no-rollback --asset-parallelism true",
         "cdk:dev": "cdk deploy -m direct --no-rollback --asset-parallelism true --hotswap-fallback"
     },
     "devDependencies": {
