--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -59,7 +59,7 @@ jobs:
         uses: ./.github/actions/setup-ci
 
       - name: Deploy cdk quantum stacks
-        run: pnpm nx affected -t cdk:dev --skip-nx-cache
+        run: pnpm nx affected -t cdk:dev:deploy --skip-nx-cache
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
