--- a/apps/service-scrape/stack-service_scrape_query/package.json
+++ b/apps/service-scrape/stack-service_scrape_query/package.json
@@ -12,7 +12,7 @@
         "cdk:dev": "cdk deploy -m direct --no-rollback --asset-parallelism true --hotswap-fallback"
     },
     "devDependencies": {
-        "@infra/common": "workspace:*",
+        "@infra/lib-common": "workspace:*",
         "@service-scrape/lib-db_service_scrape": "workspace:*",
         "aws-cdk-lib": "^2.212.0",
         "cdk-nag": "^2.37.15",
