--- a/infra/lib-common/package.json
+++ b/infra/lib-common/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@infra/common",
+    "name": "@infra/lib-common",
     "private": true,
     "exports": {
         ".": "./src/index.ts"
