--- a/apps/observability/lib-opentelemetry/package.json
+++ b/apps/observability/lib-opentelemetry/package.json
@@ -9,7 +9,7 @@
         "test:type": "tsc",
         "test:unit": "OTEL_LOG_LEVEL=trace vitest run --coverage",
         "test:dev": "OTEL_LOG_LEVEL=trace vitest --coverage",
-        "build": "mkdir dist; echo export const commitId = \\\"$(git rev-parse --short HEAD)\\\" > ./dist/commitId.ts"
+        "build": "node esbuild.ts && mkdir dist; echo export const commitId = \\\"$(git rev-parse --short HEAD)\\\" > ./dist/commitId.ts"
     },
     "dependencies": {
         "@opentelemetry/api": "^1.9.0",
@@ -25,8 +25,10 @@
         "@opentelemetry/semantic-conventions": "^1.36.0",
         "dotenv": "17.2.1",
         "pino": "9.8.0",
-        "pino-opentelemetry-transport": "^1.0.1",
         "zod": "4.0.17"
     },
-    "type": "module"
+    "type": "module",
+    "devDependencies": {
+        "pino-opentelemetry-transport": "^1.1.0"
+    }
 }
