--- a/.github/actions/setup-ci/action.yaml
+++ b/.github/actions/setup-ci/action.yaml
@@ -30,6 +30,7 @@ runs:
     - name: Cache Nx tasks from BASE SHA
       uses: actions/cache@v4
       with:
+        save-always: true
         path: .nx
         key: nx-cache-${{ github.job }}-${{ github.event.pull_request.base.sha }}-${{ github.event.pull_request.number }}-${{ github.run_id }}
         # 1. Prefer to restore from closest job and pr (common base sha)
