--- a/apps/service-scrape/function-scrape_locality/package.json
+++ b/apps/service-scrape/function-scrape_locality/package.json
@@ -9,9 +9,7 @@
         "test:dev": "vitest --coverage"
     },
     "devDependencies": {
-        "chromium-bidi": "^8.0.0",
-        "pino": "9.8.0",
-        "pino-pretty": "13.1.1"
+        "chromium-bidi": "^8.0.0"
     },
     "dependencies": {
         "@aws-lambda-powertools/parser": "^2.25.2",
