--- a/apps/observability/grafana/package.json
+++ b/apps/observability/grafana/package.json
@@ -4,6 +4,9 @@
     "scripts": {
         "format": "biome format --write",
         "test:type": "tsc",
+        "test:unit": "vitest run --coverage",
+        "test:perf": "vitest bench",
+        "test:dev": "vitest --coverage",
         "generate": "openapi-typescript --array-length true --properties-required-by-default true './src/api/openapi.json' -o './src/api/schema.d.ts' && biome format --write",
         "grafana:export": "node ./src/export.ts && biome format --write",
         "grafana:import": "node ./src/import.ts"
