--- a/apps/observability/lib-grafana/package.json
+++ b/apps/observability/lib-grafana/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@observability/grafana",
+    "name": "@observability/lib-grafana",
     "private": true,
     "scripts": {
         "format": "biome format --write",
