git command for checkout main

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "bump": "exec syncpack update && exec syncpack fix && pnpm i",
         "test": "nx run-many -t test:type test:unit",
         "build": "nx run-many -t build",
-        "git:main": "git checkout main && git pull",
+        "git:m": "git checkout main && git pull",
         "git:b": "git checkout -b"
     },
     "devDependencies": {
