update biome folder

--- a/biome.json
+++ b/biome.json
@@ -15,7 +15,8 @@
                 "noArguments": "warn"
             },
             "suspicious": {
-                "noExplicitAny": "warn"
+                "noExplicitAny": "warn",
+                "noUnknownAtRules": "off"
             }
         }
     },
