ignore tanstack router gen

--- a/biome.json
+++ b/biome.json
@@ -35,7 +35,8 @@
             "!**/node_modules",
             "!**/.puppeteer",
             "!**/cdk.out",
-            "!.nx"
+            "!.nx",
+            "!**/src/routeTree.gen.ts"
         ],
         "ignoreUnknown": true
     },
