--- a/apps/web/app/components.json
+++ b/apps/web/app/components.json
@@ -17,5 +17,8 @@
         "lib": "@/lib",
         "hooks": "@/hooks"
     },
-    "iconLibrary": "lucide"
+    "iconLibrary": "lucide",
+    "registries": {
+        "@jolly": "https://jollyui.dev/default/{name}"
+    }
 }
