--- a/apps/web/app/package.json
+++ b/apps/web/app/package.json
@@ -12,6 +12,11 @@
     },
     "dependencies": {
         "@clerk/clerk-react": "^5.47.0",
+        "@radix-ui/react-collapsible": "^1.1.12",
+        "@radix-ui/react-dialog": "^1.1.15",
+        "@radix-ui/react-separator": "^1.1.7",
+        "@radix-ui/react-slot": "^1.2.3",
+        "@radix-ui/react-tooltip": "^1.2.8",
         "@tailwindcss/vite": "^4.1.13",
         "@tanstack/react-devtools": "^0.2.2",
         "@tanstack/react-router": "^1.131.44",
@@ -24,8 +29,7 @@
         "react-aria-components": "^1.12.2",
         "react-dom": "^19.1.1",
         "tailwind-merge": "^3.3.1",
-        "tailwindcss": "^4.1.13",
-        "tw-animate-css": "^1.3.8"
+        "tailwindcss": "^4.1.13"
     },
     "devDependencies": {
         "@testing-library/dom": "^10.4.1",
@@ -33,10 +37,8 @@
         "@types/react": "^19.1.13",
         "@types/react-dom": "^19.1.9",
         "@vitejs/plugin-react": "^4.7.0",
-        "jsdom": "^26.1.0",
         "shadcn": "^3.3.0",
         "typescript": "^5.9.2",
-        "vite": "^6.3.6",
-        "web-vitals": "^4.2.4"
+        "vite": "^6.3.6"
     }
 }
