--- a/apps/web/app/package.json
+++ b/apps/web/app/package.json
@@ -29,6 +29,7 @@
         "react": "^19.1.1",
         "react-aria-components": "^1.12.2",
         "react-dom": "^19.1.1",
+        "react-stately": "^3.41.0",
         "tailwind-merge": "^3.3.1",
         "tailwindcss": "^4.1.13"
     },
