--- a/apps/web/app/package.json
+++ b/apps/web/app/package.json
@@ -4,12 +4,20 @@
     "type": "module",
     "scripts": {
         "format": "biome format --write",
-        "dev": "vite --port 8080",
+        "shad": "shadcn add",
+        "dev": "vite --port 5000",
         "build": "vite build",
         "serve": "vite preview",
         "test:type": "tsc"
     },
     "dependencies": {
+        "@clerk/clerk-react": "^5.47.0",
+        "@radix-ui/react-collapsible": "^1.1.12",
+        "@radix-ui/react-dialog": "^1.1.15",
+        "@radix-ui/react-dropdown-menu": "^2.1.16",
+        "@radix-ui/react-separator": "^1.1.7",
+        "@radix-ui/react-slot": "^1.2.3",
+        "@radix-ui/react-tooltip": "^1.2.8",
         "@tailwindcss/vite": "^4.1.13",
         "@tanstack/react-devtools": "^0.2.2",
         "@tanstack/react-router": "^1.131.44",
@@ -19,10 +27,11 @@
         "clsx": "^2.1.1",
         "lucide-react": "^0.476.0",
         "react": "^19.1.1",
+        "react-aria-components": "^1.12.2",
         "react-dom": "^19.1.1",
+        "react-stately": "^3.41.0",
         "tailwind-merge": "^3.3.1",
-        "tailwindcss": "^4.1.13",
-        "tw-animate-css": "^1.3.8"
+        "tailwindcss": "^4.1.13"
     },
     "devDependencies": {
         "@testing-library/dom": "^10.4.1",
@@ -30,9 +39,8 @@
         "@types/react": "^19.1.13",
         "@types/react-dom": "^19.1.9",
         "@vitejs/plugin-react": "^4.7.0",
-        "jsdom": "^26.1.0",
+        "shadcn": "^3.3.0",
         "typescript": "^5.9.2",
-        "vite": "^6.3.6",
-        "web-vitals": "^4.2.4"
+        "vite": "^6.3.6"
     }
 }
