--- a/apps/service-scrape/function-scrape_locality/package.json
+++ b/apps/service-scrape/function-scrape_locality/package.json
@@ -9,6 +9,7 @@
         "test:dev": "vitest --coverage"
     },
     "devDependencies": {
+        "@types/async-retry": "^1.4.9",
         "chromium-bidi": "^8.0.0"
     },
     "dependencies": {
@@ -21,6 +22,7 @@
         "@service-scrape/lib-db_service_scrape": "workspace:*",
         "@sparticuz/chromium-min": "^138.0.2",
         "@turf/turf": "7.2.0",
+        "async-retry": "^1.3.3",
         "cheerio": "1.1.2",
         "http-status-codes": "^2.3.0",
         "kysely": "0.28.4",
