--- a/package.json
+++ b/package.json
@@ -1,22 +1,23 @@
 {
     "private": true,
     "scripts": {
-        "preinstall": "npx only-allow pnpm",
-        "postinstall": "simple-git-hooks",
+        "build": "nx run-many -t build",
+        "bump": "exec syncpack update && exec syncpack fix && pnpm i",
         "docker:down": "docker compose down -v",
         "docker:up": "docker compose up --build -d",
-        "graph": "pnpm nx graph",
         "format": "biome format --write",
-        "lint": "biome lint --write",
-        "knip": "knip",
-        "bump": "exec syncpack update && exec syncpack fix && pnpm i",
-        "test": "nx run-many -t test:type test:unit",
-        "build": "nx run-many -t build",
+        "git:b": "git checkout -b",
         "git:m": "git checkout main && git pull",
-        "git:b": "git checkout -b"
+        "graph": "pnpm nx graph",
+        "knip": "knip",
+        "lint": "biome lint --write",
+        "postinstall": "simple-git-hooks",
+        "preinstall": "npx only-allow pnpm",
+        "test": "nx run-many -t test:type test:unit"
     },
     "devDependencies": {
         "@biomejs/biome": "2.2.3",
+        "@types/aws-lambda": "8.10.153",
         "@types/node": "*",
         "@vitest/coverage-v8": "3.2.4",
         "aws-cdk": "2.1029.0",
@@ -24,6 +25,7 @@
         "knip": "5.63.1",
         "nx": "21.5.2",
         "simple-git-hooks": "2.13.1",
+        "sst": "3.17.14",
         "syncpack": "14.0.0-alpha.19",
         "typescript": "~5.9.2",
         "vitest": "3.2.4"
