--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -50,8 +50,8 @@ jobs:
         continue-on-error: true
         run: pnpm nx affected -t test:unit --exclude='*,!**/function-*'
 
-  test-cdk:
-    name: Test cdk - infrastructure deployment
+  test-sst:
+    name: Test SST - infrastructure deployment
     runs-on: ubuntu-24.04-arm
     steps:
       - name: Deep checkout branch
@@ -62,8 +62,8 @@ jobs:
       - name: Setup dependencies Nx
         uses: ./.github/actions/setup-ci
 
-      - name: Deploy all cdk quantum stacks
-        run: pnpm -r cdk:dev:deploy
+      - name: Deploy SST infrastructure
+        run: pnpm sst deploy --continue --stage ${{ github.ref_name }}
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
