only run test functions on pr but will not cache results

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -52,6 +52,7 @@ jobs:
 
   test-sst:
     name: Test SST - infrastructure deployment
+    if: github.event_name == 'pull_request'
     runs-on: ubuntu-24.04-arm
     steps:
       - name: Deep checkout branch
