--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -52,6 +52,7 @@ jobs:
 
   test-sst:
     name: Test SST - infrastructure deployment
+    if: github.event_name == 'pull_request'
     runs-on: ubuntu-24.04-arm
     steps:
       - name: Deep checkout branch
@@ -63,7 +64,7 @@ jobs:
         uses: ./.github/actions/setup-ci
 
       - name: Deploy SST infrastructure
-        run: pnpm sst deploy --continue --stage ${{ github.head_ref }}
+        run: pnpm sst deploy --continue --stage ${{ github.head_ref || github.ref_name }}
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
