--- a/.github/workflows/ci-clean.yaml
+++ b/.github/workflows/ci-clean.yaml
@@ -17,7 +17,7 @@ jobs:
           uses: ./.github/actions/setup-cd
 
         - name: Remove SST infrastructure
-          run: pnpm sst remove --stage ${{ github.head_ref || github.ref_name }}
+          run: pnpm sst remove --stage ${{ github.ref_name || github.head_ref }}
           env:
             AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
             AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
