--- a/apps/frontend/web/tsconfig.json
+++ b/apps/frontend/web/tsconfig.json
@@ -1,21 +1,11 @@
 {
-    "include": [
-        "**/*.ts",
-        "**/*.tsx",
-        "../infra.ts"
-    ],
+    "include": ["**/*.ts", "**/*.tsx", "../infra.ts"],
     "compilerOptions": {
         "target": "ES2022",
         "jsx": "react-jsx",
         "module": "ESNext",
-        "lib": [
-            "ES2022",
-            "DOM",
-            "DOM.Iterable"
-        ],
-        "types": [
-            "vite/client"
-        ],
+        "lib": ["ES2022", "DOM", "DOM.Iterable"],
+        "types": ["vite/client"],
         /* Bundler mode */
         "moduleResolution": "bundler",
         "allowImportingTsExtensions": true,
@@ -30,9 +20,7 @@
         "noUncheckedSideEffectImports": true,
         "baseUrl": ".",
         "paths": {
-            "@/*": [
-                "./src/*"
-            ]
+            "@/*": ["./src/*"]
         }
     }
 }
