--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -47,3 +47,4 @@ jobs:
           DB_SERVICE_SCRAPE: ${{ secrets.DB_SERVICE_SCRAPE }}
           OTEL_EXPORTER_OTLP_ENDPOINT: ${{ secrets.OTEL_EXPORTER_OTLP_ENDPOINT }}
           OTEL_EXPORTER_OTLP_HEADERS: ${{ secrets.OTEL_EXPORTER_OTLP_HEADERS }}
+          VITE_CLERK_PUBLISHABLE_KEY: ${{ secrets.VITE_CLERK_PUBLISHABLE_KEY }}
