--- a/apps/frontend/web/package.json
+++ b/apps/frontend/web/package.json
@@ -4,6 +4,7 @@
     "type": "module",
     "scripts": {
         "format": "biome format --write",
+        "generate": "pwa-assets-generator",
         "shad": "shadcn add",
         "dev": "vite --port 5000",
         "build": "vite build",
@@ -38,9 +39,11 @@
         "@testing-library/react": "^16.3.0",
         "@types/react": "^19.1.13",
         "@types/react-dom": "^19.1.9",
+        "@vite-pwa/assets-generator": "^1.0.2",
         "@vitejs/plugin-react": "^4.7.0",
         "shadcn": "^3.3.0",
         "typescript": "^5.9.2",
-        "vite": "^6.3.6"
+        "vite": "^6.3.6",
+        "vite-plugin-pwa": "^1.1.0"
     }
 }
