--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "sst": "3.17.14",
         "syncpack": "14.0.0-alpha.19",
         "typescript": "~5.9.2",
+        "vite": "^7.1.10",
         "vitest": "3.2.4"
     },
     "simple-git-hooks": {
