--- a/apps/service-scrape/lib-db_service_scrape/package.json
+++ b/apps/service-scrape/lib-db_service_scrape/package.json
@@ -3,12 +3,14 @@
     "private": true,
     "exports": {
         ".": "./src/index.ts",
-        "./dev": "./src/dev/index.ts"
+        "./dev": "./src/dev/index.ts",
+        "./zod": "./src/schema-read-zod.ts"
     },
     "scripts": {
         "format": "biome format --write",
         "migrate": "pnpm dlx tsx ./migrate.ts",
         "generate": "node ./generate.ts && biome format --write",
+        "zod": "ts-to-zod src/schema-read-zod.ts src/schema-read-zod.ts && biome format --write",
         "test:type": "tsc",
         "test:unit": "vitest run --coverage",
         "test:dev": "vitest --coverage"
@@ -24,7 +26,8 @@
         "@types/pg": "8.15.5",
         "kysely-codegen": "0.18.5",
         "pino-pretty": "13.1.1",
-        "testcontainers": "^11.5.1"
+        "testcontainers": "^11.5.1",
+        "ts-to-zod": "^5.1.0"
     },
     "type": "module"
 }
