--- a/apps/service-scrape/function-query_freemium/package.json
+++ b/apps/service-scrape/function-query_freemium/package.json
@@ -8,6 +8,9 @@
     "dependencies": {
         "@hono/otel": "^0.6.0",
         "@observability/lib-opentelemetry": "workspace:*",
+        "@orpc/client": "^1.11.3",
+        "@orpc/openapi": "^1.11.3",
+        "@orpc/server": "^1.11.3",
         "@service-scrape/lib-db_service_scrape": "workspace:*",
         "hono": "^4.9.12",
         "kysely": "0.28.4",
